--- a/assets/javascripts/discourse/connectors/category-custom-settings/solved-settings.hbs
+++ b/assets/javascripts/discourse/connectors/category-custom-settings/solved-settings.hbs
@@ -1,9 +1,9 @@
-{{#unless siteSettings.allow_solved_on_all_topics}}
+{{#unless siteSettings.allow_expired_on_all_topics}}
 <section class='field'>
-  <div class="enable-accepted-answer">
+  <div class="enable-expired_marked-answer">
     <label class="checkbox-label">
-      {{input type="checkbox" checked=category.enable_accepted_answers}}
-      {{i18n 'solved.allow_accepted_answers'}}
+      {{input type="checkbox" checked=category.enable_expired_deals}}
+      {{i18n 'expired.allow_expired_deals'}}
     </label>
   </div>
 </section>
