--- a/assets/javascripts/discourse/connectors/topic-after-cooked/solved-panel.hbs
+++ b/assets/javascripts/discourse/connectors/topic-after-cooked/solved-panel.hbs
@@ -1,5 +1,5 @@
-{{#if topic.expired_deal}}
-<p class="expired">
-{{{topic.expired_markedAnswerHtml}}}
+{{#if topic.accepted_answer}}
+<p class="solved">
+{{{topic.acceptedAnswerHtml}}}
 </p>
 {{/if}}
