--- a/assets/javascripts/discourse/connectors/category-custom-settings/solved-settings.hbs
+++ b/assets/javascripts/discourse/connectors/category-custom-settings/solved-settings.hbs
@@ -2,8 +2,8 @@
 <section class='field'>
   <div class="enable-accepted-answer">
     <label class="checkbox-label">
-      {{input type="checkbox" checked=category.enable_accepted_answers}}
-      {{i18n 'solved.allow_accepted_answers'}}
+      {{input type="checkbox" checked=category.enable_expired_mark}}
+      {{i18n 'solved.allow_expired_mark'}}
     </label>
   </div>
 </section>
