--- a/assets/javascripts/discourse/connectors/category-custom-settings/expired-settings.hbs
+++ b/assets/javascripts/discourse/connectors/category-custom-settings/expired-settings.hbs
@@ -1,9 +1,9 @@
-{{#unless siteSettings.allow_solved_on_all_topics}}
+{{#unless siteSettings.allow_expired_on_all_topics}}
 <section class='field'>
   <div class="enable-accepted-answer">
     <label class="checkbox-label">
       {{input type="checkbox" checked=category.enable_expired_mark}}
-      {{i18n 'solved.allow_expired_mark'}}
+      {{i18n 'expired.allow_expired_mark'}}
     </label>
   </div>
 </section>
