--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -1,4 +1,4 @@
-.solved-panel, .post-controls .accepted, .fa.accepted, .accepted-text {
+.expired-panel, .post-controls .accepted, .fa.accepted, .accepted-text {
   color: green;
 }
 
@@ -20,11 +20,11 @@
   float: left;
 }
 
-.mobile-view .solved-panel {
+.mobile-view .expired-panel {
   margin-bottom: 15px;
 }
 
-.solved-panel {
+.expired-panel {
 
   .by {
     display: none;
