--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -1,8 +1,8 @@
-.expired-panel, .post-controls .accepted, .fa.accepted, .accepted-text {
+.expired-panel, .post-controls .set_expireded, .fa.set_expireded, .set_expireded-text {
   color: green;
 }
 
-.post-controls .accepted-text {
+.post-controls .set_expireded-text {
   display: inline-block;
   font-size: inherit;
   vertical-align: middle;
@@ -11,12 +11,12 @@
   z-index: 999;
 }
 
-// you can style accepted answers however your want
-.topic-post.accepted-answer .topic-body {
+// you can style set_expireded answers however your want
+.topic-post.set_expireded-answer .topic-body {
 //  background-color: #E9FFE0;
 }
 
-.mobile-view .post-controls .accepted-text {
+.mobile-view .post-controls .set_expireded-text {
   float: left;
 }
 
