--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -1,5 +1,5 @@
 .expired-panel, .post-controls .set_expireded, .fa.set_expireded, .set_expireded-text {
-  color: green;
+  color: red;
 }
 
 .post-controls .set_expireded-text {
