--- a/assets/stylesheets/exps.scss
+++ b/assets/stylesheets/exps.scss
@@ -11,8 +11,8 @@
   z-index: 999;
 }
 
-// you can style set_expired answers however your want
-.topic-post.set_expired-answer .topic-body {
+// you can style set_expired expdeals however your want
+.topic-post.set_expired-expdeal .topic-body {
 //  background-color: #E9FFE0;
 }
 
