--- a/assets/javascripts/discourse/connectors/topic-after-cooked/expired-panel.hbs
+++ b/assets/javascripts/discourse/connectors/topic-after-cooked/expired-panel.hbs
@@ -1,5 +1,5 @@
 {{#if topic.expired_deal}}
 <p class="expired">
-{{{topic.set_expiredAnswerHtml}}}
+{{{topic.set_expiredexpdealHtml}}}
 </p>
 {{/if}}
